--- a/adminlte/register.html
+++ b/adminlte/register.html
@@ -74,7 +74,7 @@
         </div>
       </form>
 
-      <a href="/adminlte/login-v2.html" class="text-center">Eu já tenho um registro</a>
+      <a href="/adminlte/index-login-v2.html" class="text-center">Eu já tenho um registro</a>
     </div>
     <!-- /.form-box -->
   </div><!-- /.card -->
