--- a/adminlte/index-login-v2.html
+++ b/adminlte/index-login-v2.html
@@ -20,7 +20,7 @@
   <div class="card card-outline card-primary">
     <div class="card-header text-center">
       <a href="#" class="h1"><b>Timer</b>Class</a>
-      <img src="/img/logo01.png" alt="Logo JP">
+      <img src="./img/logo01.png" alt="Logo JP">
     </div>
     <div class="card-body">
       <p class="login-box-msg">Faça login para iniciar sua sessão</p>
