--- a/adminlte/register.html
+++ b/adminlte/register.html
@@ -19,7 +19,7 @@
   <div class="card card-outline card-primary">
     <div class="card-header text-center">
       <a href="#" class="h1"><b>Timer</b>Class</a>
-      <img src="/img/logo01.png" alt="Logo JP">
+      <img src="../img/logo01.png" alt="Logo JP">
     </div>
     <div class="card-body">
       <p class="login-box-msg">Solicitar um Registro</p>
@@ -74,7 +74,7 @@
         </div>
       </form>
 
-      <a href="/adminlte/index-login-v2.html" class="text-center">Eu já tenho um registro</a>
+      <a href="/adminlte/index.html" class="text-center">Eu já tenho um registro</a>
     </div>
     <!-- /.form-box -->
   </div><!-- /.card -->
