--- a/adminlte/index.html
+++ b/adminlte/index.html
@@ -27,7 +27,7 @@
 
       <form action="#" method="post">
         <div class="input-group mb-3">
-          <input type="email" class="form-control" pattern="[A-Za-z0-9._%+-]+@educador.edu.es.gov.br" placeholder="Email" >
+          <input type="email" class="form-control" placeholder="Email" style="color: aliceblue;" >
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" style="color: aliceblue">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
