--- a/adminlte/register.html
+++ b/adminlte/register.html
@@ -15,24 +15,6 @@
   <link rel="stylesheet" href="./plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="./dist/css/adminlte.min.css">
-
-  <style>
-    .aviso {
-      color: red;
-    }
-
-    .icone-aviso {
-      margin-left: 5px;
-    }
-
-    .email-invalido .aviso,
-    .email-invalido .icone-aviso {
-      display: inline;
-    }
-  </style>
-
-  
-
 </head>
 
 <body class="hold-transition register-page">
@@ -88,7 +70,7 @@
           </div>
         </form>
 
-        <a href="/adminlte/index.html" class="text-center">Eu já tenho um registro</a>
+        <a href="../index.html" class="text-center">Eu já tenho um registro</a>
       </div>
       <!-- /.form-box -->
     </div><!-- /.card -->
