--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" href="" class="btn btn-primary btn-block">Sign In</button>
+            <button type="submit" href="/adminlte/blank.html" class="btn btn-primary btn-block">Sign In</button>
           </div>
           <!-- /.col -->
         </div>
