--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="./plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="./adminlte/plugins/fontawesome-free/css/all.min.css">
   <!-- icheck bootstrap -->
-  <link rel="stylesheet" href="./plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="./adminlte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="./dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="./adminlte/dist/css/adminlte.css">
+
+  <link rel="stylesheet" href="./adminlte/dist/css/adminlte.min.css">
+
 </head>
 <body class="hold-transition login-page">
 <div class="login-box">
@@ -25,9 +28,9 @@
     <div class="card-body">
       <p class="login-box-msg">Faça login para iniciar sua sessão</p>
 
-      <form action="#" method="post">
+      <form onsubmit="login(event)">
         <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email" style="color: aliceblue;" >
+          <input id="login__email" type="email" class="form-control" placeholder="Email" style="color: aliceblue;" >
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -35,7 +38,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password" style="color: aliceblue">
+          <input id="login__password" type="password" class="form-control" placeholder="Password" style="color: aliceblue">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -53,7 +56,7 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" href="/adminlte/blank.html" class="btn btn-primary btn-block">Sign In</button>
+            <button type="submit" href="./adminlte/blank.html" class="btn btn-primary btn-block">Sign In</button>
           </div>
           <!-- /.col -->
         </div>
@@ -63,7 +66,7 @@
         <a href="forgot-password.html">Esqueci a minha senha</a>
       </p>
       <p class="mb-0">
-        <a href="/adminlte/register.html" class="text-center">Não tem registro ? Solicite aqui</a>
+        <a href="./adminlte/register.html" class="text-center">Não tem registro ? Solicite aqui</a>
       </p>
     </div>
     <!-- /.card-body -->
@@ -75,10 +78,11 @@
 <footer><p>&copy; 2023 João Bley</p></footer>
 
 <!-- jQuery -->
-<script src="./plugins/jquery/jquery.min.js"></script>
+<script src="./adminlte/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="./adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="./dist/js/adminlte.min.js"></script>
+<script src="./adminlte/dist/js/adminlte.min.js"></script>
+<script src="./adminlte/dist/js/pages/login.js"></script>
 </body>
 </html>
