--- a/adminlte/blank.html
+++ b/adminlte/blank.html
@@ -51,49 +51,49 @@
         <div class="col-md-4 col-sm-6 mb-4">
           <div class="card">
             <h5>Sala de Informatica</h5>
-            <img src="/adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 1"
+            <img src="./adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 1"
               onclick="showModal('A sala de informática é um ambiente dinâmico que pode ser usado para uma variedade de atividades, desde pesquisa na web até programação, edição de mídia e aprendizado de habilidades tecnológicas. Ela desempenha um papel importante na preparação dos alunos para o mundo digital em constante evolução e ajuda a integrar a tecnologia no currículo educacional de forma eficaz.', 'Sala de Informatica')">
           </div>
         </div>
         <div class="col-md-4 col-sm-6 mb-4">
           <div class="card">
             <h5>Sala de Multiuso</h5>
-            <img src="/adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
+            <img src="./adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
               onclick="showModal('A sala de informática é um ambiente dinâmico que pode ser usado para uma variedade de atividades, desde pesquisa na web até programação, edição de mídia e aprendizado de habilidades tecnológicas. Ela desempenha um papel importante na preparação dos alunos para o mundo digital em constante evolução e ajuda a integrar a tecnologia no currículo educacional de forma eficaz.', 'Sala de Informatica')">
           </div>
         </div>
         <div class="col-md-4 col-sm-6 mb-4">
           <div class="card">
             <h5>Sala de Projeto De Vida</h5>
-            <img src="/adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
+            <img src="./adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
               onclick="showModal('A sala de informática é um ambiente dinâmico que pode ser usado para uma variedade de atividades, desde pesquisa na web até programação, edição de mídia e aprendizado de habilidades tecnológicas. Ela desempenha um papel importante na preparação dos alunos para o mundo digital em constante evolução e ajuda a integrar a tecnologia no currículo educacional de forma eficaz.', 'Sala de Informatica')">
           </div>
         </div>
         <div class="col-md-4 col-sm-6 mb-4">
           <div class="card">
             <h5>Sala de Linguagens</h5>
-            <img src="/adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
+            <img src="./adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
               onclick="showModal('A sala de informática é um ambiente dinâmico que pode ser usado para uma variedade de atividades, desde pesquisa na web até programação, edição de mídia e aprendizado de habilidades tecnológicas. Ela desempenha um papel importante na preparação dos alunos para o mundo digital em constante evolução e ajuda a integrar a tecnologia no currículo educacional de forma eficaz.', 'Sala de Informatica')">
           </div>
         </div>
         <div class="col-md-4 col-sm-6 mb-4">
           <div class="card">
             <h5>Sala de Fisica</h5>
-            <img src="/adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
+            <img src="./adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
               onclick="showModal('A sala de informática é um ambiente dinâmico que pode ser usado para uma variedade de atividades, desde pesquisa na web até programação, edição de mídia e aprendizado de habilidades tecnológicas. Ela desempenha um papel importante na preparação dos alunos para o mundo digital em constante evolução e ajuda a integrar a tecnologia no currículo educacional de forma eficaz.', 'Sala de Informatica')">
           </div>
         </div>
         <div class="col-md-4 col-sm-6 mb-4">
           <div class="card">
             <h5>Sala de Quimica</h5>
-            <img src="/adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
+            <img src="./adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
               onclick="showModal('A sala de informática é um ambiente dinâmico que pode ser usado para uma variedade de atividades, desde pesquisa na web até programação, edição de mídia e aprendizado de habilidades tecnológicas. Ela desempenha um papel importante na preparação dos alunos para o mundo digital em constante evolução e ajuda a integrar a tecnologia no currículo educacional de forma eficaz.', 'Sala de Informatica')">
           </div>
         </div>
         <div class="col-md-4 col-sm-6 mb-4">
           <div class="card">
             <h5>Chromebooks</h5>
-            <img src="/adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
+            <img src="./adminlte/img/sala_inf.png" class="card-img-top" alt="Imagem 2"
               onclick="showModal('A sala de informática é um ambiente dinâmico que pode ser usado para uma variedade de atividades, desde pesquisa na web até programação, edição de mídia e aprendizado de habilidades tecnológicas. Ela desempenha um papel importante na preparação dos alunos para o mundo digital em constante evolução e ajuda a integrar a tecnologia no currículo educacional de forma eficaz.', 'Sala de Informatica')">
           </div>
         </div>
