--- a/adminlte/validar.html
+++ b/adminlte/validar.html
@@ -29,13 +29,14 @@
             <input type="text" class="form-control" placeholder="Codigo de validação" style="color: aliceblue" required>
             <div class="input-group-append">
               <div class="input-group-text">
-                <span class="fas fa-user"></span>
+                <span class="fas fa-qrcode"></span>
               </div>
             </div>
           </div>
       </div>
       <!-- /.form-box -->
     </div><!-- /.card -->
+    
   </div>
   <!-- /.register-box -->
   <br>
