--- a/adminlte/register.html
+++ b/adminlte/register.html
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Full name" style="color: aliceblue" required>
+            <input type="text" id="fullname" class="form-control" placeholder="Full name" style="color: aliceblue" required>
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-user"></span>
@@ -46,11 +46,12 @@
             </div>
           </div>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Materia" style="color: aliceblue" required>
+            <input type="password" id="password" class="form-control" placeholder="Senha" style="color: aliceblue"
+              required />
             <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-lock"></span>
-              </div>
+              <button type="button" class="input-group-text" id="togglePassword" onclick="togglePasswordVisibility()">
+                <i id="passwordIcon" class="fas fa-eye"></i>
+              </button>
             </div>
           </div>
           <div class="row">
@@ -64,7 +65,7 @@
             </div>
             <!-- /.col -->
             <div class="col-4">
-              <button type="submit" class="btn btn-primary btn-block">Solicitar</button>
+              <a class="btn btn-primary btn-block" href="javascript:void(0)" role="button" onclick="validateAndSubmit()">Solicitar</a>
             </div>
             <!-- /.col -->
           </div>
@@ -80,6 +81,34 @@
   <footer>
     <p>&copy; 2023 João Bley</p>
   </footer>
+
+  <script>
+    function togglePasswordVisibility() {
+      var passwordField = document.getElementById("password");
+      var passwordIcon = document.getElementById("passwordIcon");
+
+      if (passwordField.type === "password") {
+        passwordField.type = "text";
+        passwordIcon.classList.remove("fa-eye");
+        passwordIcon.classList.add("fa-eye-slash");
+      } else {
+        passwordField.type = "password";
+        passwordIcon.classList.remove("fa-eye-slash");
+        passwordIcon.classList.add("fa-eye");
+      }
+    }
+
+    function validateAndSubmit() {
+      const fullname = document.getElementById("fullname").value;
+      const password = document.getElementById("password").value;
+  
+      if (!fullname || !password) {
+        console.log("Preencha todos os campos antes de solicitar.");
+      } else {
+        window.location.href = "/adminlte/validar.html";
+      }
+    }
+  </script>
 
   <!-- jQuery -->
   <script src="./plugins/jquery/jquery.min.js"></script>
