--- a/adminlte/blank.html
+++ b/adminlte/blank.html
@@ -19,7 +19,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+  <script src="./dist/js/pages/home.js"></script>
 
 
 </head>
@@ -42,7 +42,8 @@
           <a class="nav-link" href="#">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Sair</a>
+          <a type="submit" class="nav-link" onclick="sair()">Sair</a>
+
         </li>
       </ul>
     </div>
