--- a/adminlte/validar.html
+++ b/adminlte/validar.html
@@ -26,7 +26,7 @@
       </div>
       <div class="card-body">
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Codigo de validação" style="color: aliceblue" required>
+            <input type="text" class="form-control" placeholder="Codigo de validação" style="color: aliceblue" required maxlength="6">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-qrcode"></span>
