--- a/adminlte/blank.html
+++ b/adminlte/blank.html
@@ -42,7 +42,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="whatsapp-link-aqui" style="color: aliceblue;">Suporte por WhatsApp</a>
+        <a class="nav-link" href="whatsapp-link-aqui" style="color: aliceblue;">Suporte</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" style="color: aliceblue;">Sobre</a>
@@ -61,66 +61,78 @@
         <ul class="cards">
           <li class="cards_item">
             <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
+              <div class="card_image"><img src="img/informática_timeclass.jpg"></div>
               <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-                <button class="btn card_btn" >Fazer Reserva</button>
-              </div>
-            </div>
-          </li>
-          <li class="cards_item">
-            <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>
-              <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+                <h2 class="card_title">Sala de Informática</h2>
+                <p class="card_text">Espaço equipado para promover aprendizagem e prática de habilidades digitais.</p>
                 <button class="btn card_btn">Fazer Reserva</button>
               </div>
             </div>
           </li>
           <li class="cards_item">
             <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=11"></div>
+              <div class="card_image"><img src="img/projeto de vida.jpg"></div>
               <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+                <h2 class="card_title">Projeto de Vida</h2>
+                <p class="card_text">Espaço dedicado ao desenvolvimento de planos de vida e metas pessoais.</p>
                 <button class="btn card_btn">Fazer Reserva</button>
               </div>
             </div>
           </li>
           <li class="cards_item">
             <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=14"></div>
+              <div class="card_image"><img src="img/biologia_timeclass.jpg"></div>
               <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+                <h2 class="card_title">Biologia/Química</h2>
+                <p class="card_text">Laboratórios para aulas práticas, experimentos e exploração de conceitos científicos.</p>
                 <button class="btn card_btn">Fazer Reserva</button>
               </div>
             </div>
           </li>
           <li class="cards_item">
             <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=17"></div>
+              <div class="card_image"><img src="img/matemática_timeclass.jpg"></div>
               <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+                <h2 class="card_title">Física/Matemática</h2>
+                <p class="card_text">Ambientes equipados para experimentos e demonstrações práticas de conceitos.</p>
                 <button class="btn card_btn">Fazer Reserva</button>
               </div>
             </div>
           </li>
           <li class="cards_item">
             <div class="card">
-              <div class="card_image"><img src="https://picsum.photos/500/300/?image=2"></div>
+              <div class="card_image"><img src="img/linguagens_timeclass.jpg"></div>
               <div class="card_content">
-                <h2 class="card_title">Card Grid Layout</h2>
-                <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+                <h2 class="card_title">Linguagens</h2>
+                <p class="card_text">Salas dedicadas ao estudo de línguas, literatura e expressão artística.</p>
+                <button class="btn card_btn">Fazer Reserva</button>
+              </div>
+            </div>
+          </li>
+          <li class="cards_item">
+            <div class="card">
+              <div class="card_image"><img src="img/multiuso_timeclass.jpg"></div>
+              <div class="card_content">
+                <h2 class="card_title">Auditório</h2>
+                <p class="card_text">Espaço amplo para apresentações, palestras e eventos educacionais.</p>
+                <button class="btn card_btn">Fazer Reserva</button>
+              </div>
+            </div>
+          </li>
+          <li class="cards_item">
+            <div class="card">
+              <div class="card_image"><img src="https://picsum.photos/500/300/?image=8"></div>
+              <div class="card_content">
+                <h2 class="card_title">Computadores Móveis</h2>
+                <p class="card_text">Dispositivos tecnológicos para mobilidade e acesso flexível à informação.</p>
                 <button class="btn card_btn">Fazer Reserva</button>
               </div>
             </div>
           </li>
         </ul>
-      </div>      
+      </div>
+    </div>
+    
 
   <footer class="main-footer" style="background-color:#2c3338;" >
     <strong>Copyright &copy; 2023 <a href="#">João Bley</a>Todos os direitos reservados.</strong>
